force-app/main/default/objects/Calendar_Event_Change__e/Calendar_Event_Change__e.object-meta.xml
<CustomObject>
    <description>Publishes create, update, delete, and restore notifications for board-visible calendar events.</description>
    <label>Calendar Event Change</label>
    <pluralLabel>Calendar Event Changes</pluralLabel>
</CustomObject>