force-app/main/default/objects/Calendar_Event_Change__e/fields/Calendar_Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Event_Id__c</fullName>
    <label>Calendar Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>