force-app/main/default/objects/Calendar_Event_Change__e/fields/Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Id__c</fullName>
    <label>Calendar Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>