force-app/main/default/objects/Calendar_Event_Change__e/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>