force-app/main/default/objects/Calendar_Event_Change__e/fields/Changed_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Changed_By_Id__c</fullName>
    <label>Changed By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>