force-app/main/default/objects/Calendar_Event_Change__e/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <label>Owner Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>